Version 2.2.0: New structure for the project and corrections